--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -29,7 +29,8 @@
 }
 
 .home-left img {
-    width: 360px;
+    max-width: 360px;
+    width: 100%;
     border-radius: 18px;
     border: 4px solid  #66bb6a;
     transform: translateZ(50px);
